config-root/namespaces/mydev/cucumber-test/cucumber-test-svc.yaml
# Source: cucumber-test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cucumber-test
  annotations:
    meta.helm.sh/release-name: 'cucumber-test'
  namespace: mydev
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  type: ClusterIP
  ports:
  - port: 8071
    targetPort: 8071
  selector:
    app: cucumber-test-cucumber-test
